burger button collapse issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,26 +32,6 @@ html, body {
 }
 
 /*------- Home page styling  -----*/
-
-/* .carousel-caption h3 {
-    padding-top: 10px !important;
-    padding-bottom: 20px !important;
-}
-carousel-indicators {
-    margin-top: 10px;
-}
-
-.carousel-caption a {
-    background-color: #1189fa;
-    color: white;
-    font-size: 1.2em;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-   }
-   */
    
 .social {
     font-size: 2.5rem;
